@@ -85,3 +85,4 @@ test/unit/out/
 
 www/cache/
 __pycache__
+.DS_Store
