@@ -352,6 +352,11 @@ void mosquittopp::user_data_set(void *userdata)
 	mosquitto_user_data_set(m_mosq, userdata);
 }
 
+int mosquittopp::delay_puback()
+{
+	mosquitto_delay_puback(m_mosq);
+}
+
 int mosquittopp::socks5_set(const char *host, int port, const char *username, const char *password)
 {
 	return mosquitto_socks5_set(m_mosq, host, port, username, password);
