@@ -353,6 +353,7 @@ struct mosquitto {
 #ifdef WITH_EPOLL
 	uint32_t events;
 #endif
+	bool delayed_puback;
 };
 
 #define STREMPTY(str) (str[0] == '\0')
