@@ -1,3 +1,7 @@
+Client library:
+- Add `mosquitto_delay_puback()` for delaying the PUBACK message
+  until the on_message callback returns.
+
 2.0.4 - 2020-12-22
 ==================
 
